<resources>
    <string name="app_name">Shoppre</string>
    <string name="helper_text"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
    <string name="by_signing_">By signing up, you agree to Shoppre\'s <u>Terms of Use</u> &amp; <u>Privacy Policy</u></string>
    <string name="create_your_account_string">Create Your Account</string>
    <string name="full_name_string">Full Name</string>
    <string name="email_id_string">Email ID</string>
    <string name="password_string">Password</string>
    <string name="confirm_password_string">Confirm Password</string>

    <string name="worry_not_w">

Worry not! We’ve got your back.\nEnter your registered email address and we’ll send you a message to help you reset your password.
</string>
    <string name="send_reset_link_string">Send Reset Link</string>
    <string name="shoppre_logo_string">Shoppre Logo</string>
    <string name="forgot_password_2_image">Forgot Password 2 Image</string>
    <string name="check_your_email_string">Check Your Email</string>
    <string name="we_ve_sent_string">We’ve sent you an email to help you reset your password. Remember to check you spam inbox if you can’t find it.</string>
    <string name="back_to_login_string">Back To Login</string>
    <string name="new_password_string">New Password</string>
    <string name="confirm_new_password_string">Confirm New Password</string>
    <string name="reset_password_string">Reset Password</string>
    <string name="alreay_have"><font color="#000000">Already have an account?</font><font color="#2D8DFF"> Login</font></string>
    <string name="dont_have"><font color="#000000">Don\'t have an account yet?</font><font color="#2D8DFF"> Sign Up Now</font></string>
    <string name="password_error_string">Looks like the Email ID and Password you entered are incorrect. Please try again!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Onboarding text-->
    <string name="get_a_unique_indian_virtual_address_to_shop">Get a unique Indian Virtual Address to shop!</string>
    <string name="shop_from_1000_indian_websites_get_it_delivered_to_your_virtual_address">Shop from 1000+ Indian Websites &amp; get it delivered to your Virtual Address</string>
    <string name="we_ll_consolidate_ship_it_to_you">We\'ll consolidate &amp; ship it to you!</string>
    <string name="unlock_your_unique_virtual_address">Unlock your unique Virtual Address</string>
    <string name="use_this_address_to_shop_from_india">Use this address\nto shop from India</string>
    <string name="your_indian_virtual_address">Your Indian Virtual Address</string>
    <string name="locker_no_sa_29j17_122545_indian_shoppre_llp_182_1st_floor_2nd_cross_rd_7th_main_koramangala_1st_block_bengaluru_karnataka_560_034">Indian Shoppre LLP,<br />#182, 1st Floor, 2nd Cross Rd,<br />7th Main, Koramangala 1st Block,<br />Bengaluru, Karnataka - 560 034</string>

    <!--    facebook -->
    <string name="facebook_app_id">651881328327888</string>
    <string name="fb_login_protocol_scheme">fb651881328327888</string>
    <string name="Loading">Loading...</string>
    <string name="enter_your_phone_number_to_get_regular_alerts">Enter your phone number to get regular alerts</string>
    <string name="password_error_message"><![CDATA[A password with 8 or more characters with a mix of letters, numbers & symbols is required]]></string>
    <string name="enable_whatsapp_update_string">Enable Whatsapp Update</string>
    <string name="get_rs_350_">Get Rs. 350 cashback when your friend’s first package dispatches from our warehouse</string>
    <string name="virtual_indian_address">Virtual Indian Address</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="help_amp_faqs"><![CDATA[Help & FAQs]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="wallet_transaction">Wallet Transaction</string>
    <string name="share_the_unique">Share the unique code and invite your friends to ship with Shoppre and earn a cashback of Rs 350 when their first package dispatches. They get Rs. 350 too!</string>
    <string name="you_have_not">You have not invited anybody yet. Share the referral with your friends and start earning now!</string>
    <string name="can_i_transfer_the_cashback_to_my_bank">Can I Transfer the Cashback to My Bank?</string>
    <string name="how_can_i_invite_my_friends">How Can I Invite My Friends?</string>
    <string name="how_does_shoppre_referrals_work">How Does Shoppre Referrals Work?</string>
    <string name="enter_the_referral_code_">Enter the referral code shared by your\nfriend and get you referral reward</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_cash">My Cash</string>
    <string name="u20b9_100">₹ 100</string>
    <string name="my_rewards">My Rewards</string>
    <string name="u20b9_250">₹ 250</string>
    <string name="referral_offers_coupons">REFERRAL/ OFFERS/ COUPONS</string>
    <string name="read_more">Read More</string>
    <string name="wow_can_i_use_my_wallet_balance">Wow can I use My Wallet balance?</string>
    <string name="delete"><u>Delete</u></string>
    <string name="edit"><u>Edit</u></string>
    <string name="varify_your_account_details">We’ve sent an email with the verification link to your ID which is valid for <b>7 days only</b>. Please verify your account to access all the features.</string>
    <string name="delivery_address">24 Airport Rd -<br />Garhoud - Dubai -<br />United Arab Emirates</string>
    <string name="update_address">Update Address</string>
    <string name="i_agree_to_all_terms_conditions">I agree to all  <font color='#8F8F8F'><u><bold>Terms &amp; Conditions</bold></u></font></string>
    <string name="ill_shop_for_my_self_text">Shop directly on any Indian sites and get it delivered to your ShoppRe Virtual Address. We\'ll receive your package &amp; ship it to anywhere across the globe</string>
    <string name="please_note_">Please Note that the shipping rates for Liquid/ Semi-Liquid products are higher. Check our Shipping Price Calculator for estimate pricing.</string>
    <string name="shop_for_me_text"><![CDATA[If you don\'t have an Indian Credit/Debit Card for payment or Indian Mobile Number to register on Shopping websites, we’ll shop on your behalf & ship it to you!]]></string>
    <string name="return_item_string">You’ve selected <b>1</b> item for <b>Return</b></string>
    <string name="discard">You’ve selected <b>1</b> item for <b>Discard</b></string>
    <string name="split">You’ve selected <b>1</b> item for <b>Split</b></string>
    <string name="exchange">You’ve selected <b>1</b> item for <b>Exchange</b></string>
    <string name="seller_pick_up_text">The sender will pick up the package directly from the ShoppRe facility.\n \nFree for 3 days of item reaching your locker, you’ll be charged ₹50/item each day thereafter</string>
    <string name="ship_it_to_seller_text">Shoppre has to return the package for you to the sender.\n \nA shipment will be created and you’ll be charged as per the domestic shipping rates which will be notified via email.</string>
    <string name="ship_it_to_seller_landing_text">Add the address provided by the eCommerce where the product needs to be returned.\n \nDomestic Shipping Charges will be applied based on the weight of your package</string>
    <string name="add_more_photo_text">You’ve selected 1 item for <b>Additional</b> Photo<br></br><br></br>Do you want to select more?</string>
    <string name="we_usually_don_t">We usually don’t place orders on this website. Please go through return/refund policies before placing your order. If you trust this website, we’ll still place this order on your behalf.</string>
    <string name="looks_like_you_are_">Looks like you are ordering from an e-Pharmacy. Click here to read medicine related shipping guidelines before placing your order.</string>
    <string name="choose_packages">Choose Packages for Shipment</string>
    <string name="the_total_value">The Total Value of your shipment is above ₹ 50,000.\nYou need to pay additional charges to ship it.</string>
    <string name="_1_of_the_packages">1 of the packages selected does not have an invoice.<br></br>It is mandatory to attach invoice for all shipments as per customs regulations.</string>
    <string name="shipping_preference">Shipping Preference</string>
    <string name="get_vip_treatment"><![CDATA[Get VIP treatment by pushing your packages ahead in the shipment queue. Faster Consolidation, Special Requests & Out the Door quickly!]]></string>
    <string name="ship_request_summary">Ship Request Summary</string>
    <string name="airport_rd">Airport Rd - Garhoud - Dubai - United Arab Emirates</string>
    <string name="change"><u>Change</u></string>
    <string name="add"><u>Add</u></string>
    <string name="your_order_was">Your order was successfully placed.\nWe’ll accept the package for you.</string>
    <string name="your_shipment_request">Your shipment request is in queue. We’ll notify you once your packages are ready to be shipped.</string>
    <string name="we_ll_share_the">We’ll share the payment link once your packages\n are ready to be shipped.\n\n Please make the payment within 7 days of recieving the link.\n There will be a storage fee of INR 100/day after the 7th day.</string>
    <string name="the_shipment_cannot">The shipment cannot be processed without invoices for all the packages. Please upload the invoice to avoid any delays in shipment. You can cancel your order within one hour of creating shipment.</string>
    <string name="we_re_processing_">We’re processing your shipment request.\nYou will receive the payment link shortly.</string>
    <string name="please_make_the_payment">Please make the payment within 7 days of initiation after which there’ll be a charge of ₹ 100/day. The charges will be added to the wallet.</string>
    <string name="orders_more_than_15">Orders more than 15 items per website will incur an additional service fees of INR 50 per item</string>
    <string name="exchange_toast">We’re reviewing your Exchange Request</string>
    <string name="return_toast">We’re reviewing your Return Request</string>
    <string name="split_toast">We’re reviewing your Split Package Request</string>
    <string name="discard_toast">We’re reviewing your Discard Request</string>
    <string name="photo_toast">We’re reviewing your Additional Photo Request</string>
    <string name="your_package_contains_damaged_items">- Your package contains<font color="#FF0000"><b> damaged</b></font> items</string>
    <string name="your_package_contains">- Your package contains<font color="#FF0000"><b> restricted</b></font> items, which\ncan be shipped<b> only within India</b>. Deselect the\npackage to ship internationally.</string>
    <string name="get_rs_500_cashback_when_your_friend_s_first_package_arrives_at_our_warehouse">Get Rs. 500 cashback when your friend’s first package arrives at our warehouse</string>
    <string name="unable_to_open_file">Unable to open file</string>

    <!--    <string name="password_error_message"><![CDATA[A Password 8 or more characters with a mix of letters, numbers & symbols is required]]></string>-->


</resources>