<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ForgotPasswordMessage"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:src="@mipmap/shoppre_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="77dp"
        android:contentDescription="@string/shoppre_logo_string"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_forgot_password2"
        android:contentDescription="@string/forgot_password_2_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_email_string"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:textColor="@color/black"
        android:letterSpacing="0.03"
        android:textFontWeight="600"
        android:textSize="12sp"
        android:lineHeight="15sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="33dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textFontWeight="500"
        android:textColor="@color/black"
        android:text="@string/we_ve_sent_string"
        android:lineHeight="15sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="82dp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/back_to_login_string"
        android:textColor="@color/button_blue"
        android:letterSpacing="0.03"
        app:strokeColor="@color/button_blue"
        android:layout_marginTop="90dp"
        android:id="@+id/backToLoginBtn"
        android:textSize="14sp"
        android:lineHeight="17sp"
        android:textFontWeight="600"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="5dp"
        android:textAllCaps="false"/>
</LinearLayout>