<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".UI.ForgetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="22dp">

            <ImageView
                android:layout_width="164dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="125dp"
                android:layout_marginTop="77dp"
                android:src="@mipmap/shoppre_logo" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginHorizontal="82dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_forgot_password1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="22dp"
                android:text="Forgot Password?"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="39dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/worry_not_w"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout


                android:id="@+id/emailId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="38dp"
                app:boxBackgroundColor="@color/box_background_color"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/box_background_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_id_string"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="12sp"
                    app:boxStrokeColor="@color/box_background_color" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/sendResetBtn"
                android:layout_width="match_parent"

                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="82dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="82dp"
                android:backgroundTint="@color/button_blue"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0.03"
                android:text="@string/send_reset_link_string"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="14sp"
                app:cornerRadius="5dp">

            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>